# SunPosDNIWeights

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FW.json  LICENSE  README.md  project_manager.py
apps/AnnualEnergy/: CMakeLists.txt  main.cpp
data/: directions_with_weights_and_efficiency_tarancon_spain.csv  directions_with_weights_tarancon_spain.csv  dni_tarancon_spain.csv
evaluators/: layout_generator.py  workflow_evaluator.py
firetasks/: compute_annual_energy.py  compute_fitness.py  create_population_folder.py  generate_biomimetic_layout.py  generate_biomimetic_layout_from_parameters.py  generate_parameter_sets.py  generate_sampling.py  run_tonatiuh.py
include/: AnnualEnergyCalculator.h  AnnualEnergyFromPrecomputedData.h  DNIProcessor.h  DNISeries.h  DirectionUtils.h  Interpolator.h  Loader.h  SunPathBinner.h  SunPosition.h
layout_generators/: biomimetic_spiral_layout_generator.py  rectangular_layout_generator.py
optimizers/: de_blackbox_optimizer.py  metaheuristic_optimizer.py  population_generator.py
projects/tarancon/: config.json  project_config.json
projects/tarancon/layouts/: layout_initial.csv  layout_test.csv
projects/tarancon/results/: annual_energy.csv  directions_with_weights_and_efficiency_tarancon_spain.csv  directions_with_weights_tarancon_spain.csv  tarancon_annual_energy.csv
projects/tarancon/scripts/: biomimetic_optimization_workflow.py  get_create_population_firework.py  launch_annual_energy.py  launch_generate_sampling.py  launch_tarancon_workflow.py  run_de_optimization.py  run_tarancon_fireworks.py  simulate_layout.tnhpps  simulate_layout_tarancon_spain.tnhpps  test_generate_layout.py
src/: AnnualEnergyCalculator.cpp  AnnualEnergyFromPrecomputedData.cpp  CMakeLists.txt  DNIProcessor.cpp  DNISeries.cpp  Interpolator.cpp  SunPathBinner.cpp  SunPosition.cpp
tools/GenerateSamplingDirections/: CMakeLists.txt  main.cpp
tools/GenerateSamplingDirectionsAndWeights/: CMakeLists.txt  main.cpp
workflows/: hello_task.py  launch_hello.py  workflow_annual_energy.py  workflow_generate_sampling.py  workflow_tarancon_full.py
